--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.0",
-    "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-compass": "~0.6.0",
+    "grunt-contrib-less": "~0.10.0",
     "grunt-contrib-watch": "~0.3.1",
     "grunt-contrib-coffee": "~0.6.4"
   }
